# modernreformation

./: .env.example  .gitignore  README.md  config.example.yml  pyproject.toml
.github/workflows/: sync.yml
src/modernreformation_sync/: __init__.py  bible.py  builder.py  cli.py  config.py  feed.py  models.py  readeck.py  render.py  sanity.py  state.py  translator.py
tests/: test_bible.py  test_builder.py  test_cli.py  test_config.py  test_feed.py  test_readeck.py  test_render.py  test_sanity.py  test_translator.py
